--- a/start/css/style.css
+++ b/start/css/style.css
@@ -1,117 +1,25 @@
-/*h2{
-    background-color: gray;
-    padding: 30px 35px;
-    margin: -10px -50px;
-    text-align:center;
-    border-radius: 10px 10px 0 0;
+h1{
+    text-align: center;
 }
-*/
-hr{
-    margin: 10px -50px;
-    border: 0;
-    border-top: 1px solid #464646;
-    margin-bottom: 40px;
+h3{
+    text-align: center;
 }
-
-div.container{
-    width: 900px;
-    height: 610px;
-    margin:35px auto;
+body{
+    background: black;
+    color: whitesmoke;
 }
-
-div.main{
-    width: 300px;
-    padding: 10% 10%;
-    border: 2px solid red;
-    border-radius: 10px;
-    float:left;
-    margin-top: 50px;
-    margin-left: 20%;
+button{
+    margin: 20px;
+    padding: 15px;
+    background-color: teal;
+    color: white;
+    border: 3px;
+    font-size: 12px ;
+    text-align: center;
+    position: absolute;
+    left: 45%;
+    border-radius: 10%;
 }
-
-input[type=text],input[type=password]{
-    width: 100%;
-    height: 40px;
-    padding: 5px;
-    margin-bottom: 25px;
-    margin-top: 5px;
-    border: 2px solid blue;
-    color: coral;
-    font-size: 16px;
-    border-radius: 5px;
-}
-
-label{
-    color: coral;
-    text-shadow: 0 1px 0 blue;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-center{
-    font-size:32px;
-}
-
-.note{
-    color:red;
-}
-
-.valid{
-    color:green;
-}
-
-.back{
-    text-decoration: none;
-    border: 1px solid greenyellow;
-    background-color: aquamarine;
-    padding: 3px 20px;
-    border-radius: 2px;
-    color: aqua;
-}
-
-input[type=button]{
-    font-size: 16px;
-    background: linear-gradient(crimson 5%, darkblue 100%);
-    border: 1px solid black;
-    color: black;
-    font-weight: bold;
-    cursor: pointer;
-    width: 100%;
-    border-radius: 5px;
-    padding: 10px 0;
-    outline:none;
-}
-
-input[type=button]:hover{
-    background: linear-gradient(#ffdd7f 5%, #ffbc00 100%);
-}
-
-/* voor images ronden handig voor profiel foto's
-
-img{
-    border-radius: 50%;
-} */
-/* style voor de side bar (Kan gebruikt worden voor toegang tot friends tab) */
-.sidebar {
-    height: 100%;
-    width: 75px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: navy;
-    overflow-x: hidden;
-    padding-top: 16px;
-}
-    
-.sidebar a {
-    padding: 6px 8px 6px 16px;
-    text-decoration: none;
-    font-size: 30px;
-    color: #818181;
-    display: block;
-}
-    
-.sidebar a:hover {
-    color: crimson;
+button:hover{
+    background-color: cadetblue;
 }
